# finMCP

./: .gitignore  Claude.md  Makefile  Prd.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO.md  MCP_INTERFACE.md
sample_data/: hdfc_savings_2025_01.csv  hdfc_savings_2025_02.csv  hdfc_savings_2025_03.csv  hdfc_savings_2025_04.csv  hdfc_savings_2025_05.csv  hdfc_savings_2025_06.csv  icici_creditcard_2025_01.csv  icici_creditcard_2025_02.csv  icici_creditcard_2025_03.csv  icici_creditcard_2025_04.csv  icici_creditcard_2025_05.csv  icici_creditcard_2025_06.csv
scripts/: generate_dummy_data.py  setup_demo.py
src/finance_mcp/: __init__.py  config.py  errors.py  server.py
src/finance_mcp/analytics/: __init__.py  aggregations.py  insights.py  recurring.py
src/finance_mcp/categorization/: __init__.py  default_rules.py  engine.py  rules.py
src/finance_mcp/parsers/: __init__.py  base.py  hdfc.py  icici.py  normalize.py
src/finance_mcp/prompts/: __init__.py  find_savings.py  goal_check.py  monthly_review.py
src/finance_mcp/resources/: __init__.py  accounts.py  budgets.py  categories.py  (+1 more)
tests/: conftest.py
tests/test_analytics/: test_aggregations.py  test_recurring.py
tests/test_categorization/: test_engine.py  test_rules.py
tests/test_integration/: test_generator_roundtrip.py
tests/test_parsers/: test_hdfc.py  test_icici.py  test_normalize.py
tests/test_server/: test_advanced_tools.py  test_prompts.py  test_resources.py  test_tools.py
tests/test_storage/: test_repository.py
(+22 files in other folders)
